# Magnum-tests

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
